# the-cairn

./: .gitignore  AGENTS.md  DESIGN.md  LICENSE  Makefile  README.md  TODO.md  alembic.ini  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
alembic/: env.py
alembic/versions/: 018b2ec32c0c_add_composer_to_tune_add_instrument_.py  026536c6736a_add_warmup_instruments_join_table_drop_.py  10d144490ed6_add_recording_and_recording_reference_.py  14bdceb5cccf_add_display_alias_id_to_box_and_list_.py  16937de1282b_add_tune_list_set_entries_and_.py  1e410e1aafc6_add_tempo_records.py  1fd3a070b4f4_add_tune_boxes_tune_box_instruments_.py  315e213ce8b4_add_sort_name_to_tune_aliases.py  3591995e8069_add_practice_lists_and_tune_list_entries.py  3e71efc09f16_add_thesession_attribution_fields_to_.py  46e25adf2363_add_warmupitem.py  50c587226471_add_sort_title_to_tune.py  522b930c4681_add_tuneset_source_abc_header_member_.py  638eed9e42d1_add_instrument_tunings_table.py  661611a1540d_add_warmup_default_tempo_and_warmup_.py  68ab98a8b2d0_add_thesession_community_data_side_.py  698cb50a4bc7_add_tuneset_tunesetmember.py  6c34bdedcad9_add_practicesession_practicesessionitem.py  (+16 more)
cairn/: config.py  database.py  dependencies.py  logging_config.py  main.py  models.py  models_thesession_community.py  models_thesession_tunes.py  schemas.py  templating.py
content/: getting-started.md
deploy/: Caddyfile  backup.sh  cairn.service  provision.sh  run-deploy.sh
scripts/: export_seed.py  import_abc.py  import_content.py  import_thesession.py  seed.py
seeds/: boxes.json  lists.json  tunes.json  warmups.json
tests/: conftest.py  test_config.py  test_dependencies.py  test_models.py  test_templating.py
(+128 files in other folders)
