[project]
name = "the-cairn"
version = "0.2.0"
description = "Web app for learning and retaining traditional Irish music tunes"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "alembic>=1.18.4",
    "authlib>=1.7.2",
    "fastapi>=0.136.3",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.6",
    "markdown>=3.10.2",
    "pydantic>=2.13.4",
    "python-frontmatter>=1.3.0",
    "python-multipart>=0.0.32",
    "rich>=15.0.0",
    "sqlalchemy[asyncio]>=2.0.50",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.0",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.17",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 120
target-version = "py312"
exclude = ["alembic"]

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
# B008: FastAPI uses Depends()/Form() in function signatures by design
ignore = ["B008", "E741"]
